--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "test docker dev env",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
+    "mongoose": "^5.0.5",
     "nodemon": "^1.14.12"
   }
 }
